@@ -19,21 +19,15 @@ java $MEMORY $GC $GC_LOG $DUMP  -jar target/HW5.jar>UseSerialGC.log
 
 
 #young PS Scavenge old PS MarkSweep with adaptive sizing
-GC="-XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+UseAdaptiveSizePolicy"
+GC="-XX:+UseParallelGC"
 java $MEMORY $GC $GC_LOG $DUMP  -jar target/HW5.jar>UseParallelGC-UseAdaptiveSizePolicy.log
 
 #young PS Scavenge old PS MarkSweep, no adaptive sizing
-GC="-XX:+UseParallelGC -XX:+UseParallelOldGC -XX:-UseAdaptiveSizePolicy"
+GC="-XX:+UseParallelGC -XX:-UseParallelOldGC"
 java $MEMORY $GC $GC_LOG $DUMP  -jar target/HW5.jar>UseParallelGC.log
 
 #young ParNew old ConcurrentMarkSweep
-GC="-XX:+UseConcMarkSweepGC -XX:+UseParNewGC"
+GC="-XX:+UseConcMarkSweepGC"
 java $MEMORY $GC $GC_LOG $DUMP  -jar target/HW5.jar>UseParallelGC.log
 
 
-
-
-#
-#-XX:+UseParNewGC (deprecated in Java 8 and removed in Java 9 - for ParNew see the line below which is NOT deprecated)	young ParNew old MarkSweepCompact
-#	**
-#-XX:+UseConcMarkSweepGC -XX:-UseParNewGC (deprecated in Java 8 and removed in Java 9)	young Copy old ConcurrentMarkSweep**
